# mooplot

./: .gitignore  .pre-commit-config.yaml  README.md  bibkeys.txt  codecov.yml  index.html  update_bib.sh
.github/workflows/: R.yml  python.yml
python/: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements_dev.txt  search.html  searchindex.js  sg_execution_times.html  tox.ini
python/_downloads/0ceb7ba8c2d688446a82868e209a92e2/: plot_02_pf_3d.ipynb
python/_downloads/1a6a2fce8a2700477c7b784156aab22c/: plot_02_pf_3d.py
python/_downloads/e004effd0d9a8639112ac3cc60156410/: plot_pf.ipynb
python/_downloads/e8531804fc764cd8955e3d9f68db5817/: plot_01_pf_2d.ipynb
python/_downloads/f963b0306940a5af8de872e85e56b6b9/: plot_01_pf_2d.py
python/_modules/: index.html
python/_modules/mooplot/: _plot.html
python/_sources/: index.rst.txt  sg_execution_times.rst.txt
python/_sources/auto_examples/: index.rst.txt  plot_01_pf_2d.rst.txt  plot_02_pf_3d.rst.txt  plot_pf.rst.txt  sg_execution_times.rst.txt
python/_sources/reference/: index.rst.txt
python/_sources/whatsnew/: index.rst.txt
python/_static/: documentation_options.js  switcher.json  theme_override.css
python/auto_examples/: index.html  plot_01_pf_2d.html  plot_02_pf_3d.html  plot_pf.html  sg_execution_times.html
python/doc/: Makefile  conftest.py
python/doc/source/: REFERENCES.bib  conf.py  index.rst
python/doc/source/_static/: switcher.json
python/doc/source/reference/: functions.plot.rst  index.rst
python/doc/source/sphinxext/: sg_doc_build.py
python/examples/: README.rst  metrics.md  plot_01_pf_2d.py  plot_03_eaf.py  plot_pf.py
python/reference/: functions.plot.html  index.html
python/src/: conftest.py
python/src/mooplot/: __init__.py  _plot.py  _utils.py  colour.py  plot.py
python/tests/: conftest.py  test_mooplot.py
python/whatsnew/: index.html
r/: .Rbuildignore  .gitignore  404.html  DESCRIPTION  Makefile  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
r/R/: eafdiffplot.R  eafplot.R  interactive.R  mooplot-package.R  pdf_crop.R  reexport.R  symdevplot.R  symdiffplot.R  utils.R
r/inst/: CITATION  REFERENCES.bib  WORDLIST
r/man/: choose_eafdiffplot.Rd  eafdiffplot.Rd  eafplot.Rd  mooplot-package.Rd  pdf_crop.Rd  reexports.Rd  symdevplot.Rd
r/man-roxygen/: arg_ideal_null.R
r/man/macros/: macros.Rd
r/news/: index.html
r/reference/: choose_eafdiffplot.html  eafdiffplot.html  eafplot.html  eafplot.list.html  index.html  mooplot-package.html  mooplot.html  pdf_crop.html  read_datasets.html  reexports.html  symdevplot.html
r/tests/: testthat.R
r/tests/testthat/: helper-common.R  lin.S.txt  sph.S.txt  test-eafdiffplot.R  test-eafplot-list.R  test-eafplot.R  test-symdevplot.R
r/tools/: create-figures.R
